<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NotiMed</string>
    <string name="login">Inicio de sesión</string>
    <string name="labelEmail">Correo electrónico</string>
    <string name="labelPassword">Contraseña</string>
    <string name="forgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="loginText">Inicia sesión</string>
    <string name="registerText">Regístrate</string>
    <string name="accountRegister">¿No tienes cuenta?</string>
    <string name="labelName">Nombre</string>
    <string name="labelLastName">Apellido</string>
    <string name="labelBirthday">Fecha de nacimiento</string>
    <string name="titleBirthday">Selecciona tu fecha de nacimiento</string>
    <string name="loginNav">¿Ya tienes una cuenta? ¡Inicia sesión!</string>
    <string name="labelGender">Género</string>
    <string name="helper_text">requerido</string>
    <string name="labelRecover">Recuperar contraseña</string>
    <string name="placeholderEmail" translatable="false">mrroboto@gmail.com</string>
    <string name="labelRecoverButton">Recuperar contraseña</string>
    <string name="onErrorEmpty">Este campo es requerido</string>
    <string name="minimunChars">Se requieren mínimo 8 caracteres</string>
    <string name="ErrorForMinumunChars"> Ingresa un nombre significativo </string>
    <string name="ErrorForDate"> Selecciona una fecha </string>
    <string name="ErrorForHour"> Selecciona una hora </string>
    <string-array name="genders">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="ErrorforEmail">Ingresa un correo electrónico</string>
    <string name="ErrorforName">¿Estás seguro de haber ingresado tu nombre correctamente?</string>
    <string name="ErrorforLastName">¿Estás seguro de haber ingresado tu apellido correctamente?</string>
    <string name="ErrorforDropdown">Por favor selecciona uno</string>
    <string name="Welcome">Bienvenido</string>
    <string name="instructions">Ingresa a la actividad que desees realizar</string>
    <string name="appointment">Citas medicas</string>
    <string name="contacts">Contactos</string>
    <string name="profile">Perfil</string>
    <string name="reminder">Recordatorios</string>
    <string name="Reminder_title">Recordatorios</string>
    <string name="ReminderDefaultText">No tienes recordatorios guardados</string>
    <string name="textContacts">Contactos médicos</string>
    <string name="withoutcontact_text">No tienes contactos médicos guardados</string>
    <string name="textAppointment">Citas médicas</string>
    <string name="withoutAppointment_text">No tienes citas médicas guardadas</string>
    <string name="AddReminder_title">Recordatorio</string>
    <string name="addressTitle">Dirección de consultorio</string>
    <string name="Address_hint">Dirección</string>
    <string name="doctor_hint">Doctor</string>
    <string name="AppointmentName_hint">Cita por gripe</string>
    <string name="Notes_hint">Sintomas…</string>
    <string name="savebutton_text">Guardar</string>
    <string name="cancelbutton_text">Cancelar</string>
    <string name="addAppointment_text">Cita médica</string>
    <string name="EditAppointment_label">Nombre de cita médica</string>
    <string name="editDoctor_helperText">Nombre de médico</string>
    <string name="editDate_helperText">Fecha</string>
    <string name="Address_helperText">Dirección de consultorio</string>
    <string name="Notes_helperText">Notas adicionales</string>
    <string name="addContact_text">Contacto médico</string>
    <string name="editPhone_text">Número de teléfono</string>
    <string name="Phone_hint">2222–3333</string>
    <string name="contactDoctor_hint">Dr. Notimed</string>
    <string name="specialization_texthint">Especialización del médico</string>
    <string name="Schedule_hintText">Horarios de consulta</string>
    <string name="weekDays_hintText">Seleccione los días de consulta</string>
    <string name="Monday_text">Lunes</string>
    <string name="Tuesday_text">Martes</string>
    <string name="wednesday_text">Miércoles</string>
    <string name="Thursday_text">Jueves</string>
    <string name="Friday_text">Viernes</string>
    <string name="Saturday_text">Sábado</string>
    <string name="Sunday_text">Domingo</string>
    <string name="start_text">Inicio</string>

    <string name="text_final">Finaliza</string>
    <string name="hint_general_specialization">General</string>
    <string name="medicine_hint">Medicamento</string>
    <string name="times_a_day_hint">Repetir cada</string>
    <string-array name="times">
        <item>Cada 2 horas</item>
        <item>Cada 4 horas</item>
        <item>Cada 6 horas</item>
        <item>Cada 8 horas</item>
        <item>Personalizado</item>
    </string-array>
    <string-array name="response_food">
        <item>Sí</item>
        <item>No</item>
    </string-array>

    <string-array name="specializations">
        <item>General</item>
        <item>Pediatría</item>
        <item>Fisioterapia</item>
        <item>Psicologia</item>
        <item>Oftalmología</item>
        <item>Personalizado</item>
    </string-array>

    <string name="every_prefix"> Cada: </string>
    <string name="hour_suffix"> Hora(s) </string>
    <string name="dateRange_hint"> Rango de fechas </string>
    <string name="dateRange_title"> Selecciona un rango de fechas </string>
    <string name="enter_specialization"> Ingresa la especialización del médico </string>
    <string name="validHour"> Ingresa una hora valida </string>
    <string name="warning_title_appointment"> ¡La cita no ha sido guardada! </string>
    <string name="warning_body_appointment"> La cita no se ha guardado, ¿deseas cancelarla? </string>
    <string name="warning_title_reminder"> ¡El recordatorio no ha sido guardado! </string>
    <string name="warning_body_reminder"> El recordatorio no se ha guardado, ¿deseas cancelarlo? </string>
    <string name="warning_title_contact"> ¡El contacto no ha sido guardado! </string>
    <string name="warning_body_contact"> El contacto no se ha guardado, ¿deseas cancelarlo? </string>
    <string name="no_response"> No </string>
    <string name="yes_response"> Sí </string>
    <string name="labelDose">Dosis</string>
    <string name="hourLabel">Hora:</string>
    <string name="labelStartHour">Hora inicial</string>
    <string name="labelHour">Hora</string>
    <string name="scheduleLabel">Horario de medicamento</string>
    <string name="scheduleContactLabel">Horario de consulta</string>
    <string name="hour_final"> Hora final </string>
    <string name="foodQuestionLabel">¿El medicamento debe acompañarse con un alimento?</string>
    <string name="first_start"> Primero selecciona una hora de inicio </string>
    <string name="option_food">Opción</string>
    <string name="DoseLessZero">Dosis debe ser mayor a 0</string>
    <string name="DoseEmpty">Ingresa una dosis</string>
    <string name="ErrorPhone">Ingresa un número de teléfono valido</string>
    <string name="ErrorLessHour"> La hora final es menor a la de inicio </string>
    <string name="ErrorStartHourHigher"> La hora inicial es mayor que la hora final  </string>

    <string name="success_create_user"> ¡Usuario creado con exito! </string>
    <string name="error_existing_user"> Este usuario ya existe :( </string>
    <string name="error_400_register"> Revisa los datos </string>

    <string name="not_found_user"> Usuario no encontrado </string>
    <string name="credentials_error"> Revisa tus credenciales </string>

    <string name="needsFood"> Debe tomarse al ingerir alimentos </string>
    <string name="noNeedsFood"> Puede tomarse sin alimentos </string>

    <string name="recover_title_success"> La contraseña se envio al correo: </string>
    <string name="recover_body_success"> Revisa tu correo si no lo encuentras revisa en el apartado Spam </string>

    <string name="general_error"> Ocurrió un error inesperado… Intentalo nuevamente </string>

    <string name="ok_response" translatable="false">@android:string/ok</string>
    <string name="next_reminder_hint">Proximo recordatorio:</string>
    <string name="options_label">Consideraciones:</string>
    <string name="reminder_created">¡Recordatorio creado!</string>

    <string name="deleteReminderTitle">¿Seguro que deseas eliminar este recordatorio?</string>

    <string name="deleteContactTitle">¿Seguro que deseas eliminar este contacto?</string>

    <string name="deleteAppointmentTitle">¿Seguro que deseas eliminar esta cita?</string>

    <string name="close_session_title">¿Deseas cerrar tu sesion?</string>

    <string name="update_reminder_title"> Actualizar recordatorio </string>

    <string name="EditProfile">Actualizar perfil</string>
    <string name="reminder_updated">¡Recordatorio actualizado!</string>

    <string name="success_user_update"> ¡Perfil actualizado con éxito! </string>

    <string name="appointment_created">¡Cita creada!</string>
    <string name="appointment_updated">¡Cita actualizada!</string>
    <string name="appointment_exists"> Esta cita ya existe :c </string>

    <string name="title_update_appointment">Actualizar cita médica</string>

    <string name="contact_created">¡Contacto creado!</string>
    <string name="contact_updated">¡Contacto actualizado!</string>
    <string name="contact_exists"> Este contacto ya existe </string>


    <string name="logout_title"> Cerrar sesión </string>
    <string name="logout_message"> Si cierras sesión tus recordatorios serán descartados. ¿Deseas cerrar sesión? </string>
    <string name="notes_label">Notas adicionales:</string>
    <string name="date_appointment_label"> Fecha de cita: </string>
    <string name="not_found_appointment">Cita no encontrada :c</string>
    <string name="title_update_contact"> Actualizar contacto </string>
    <string name="contact_not_found"> Contacto no encontrado  </string>
</resources>