<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contact"
            type="com.mrroboto.notimed.data.models.Contact" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/smallGap"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="DocRoboto"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="Numero telefonico: 7563 1005"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/contactAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="Ubicación: Antiguo Cuscatlan, Calle #5, Clinica MemoMed"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/specializationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="Especialidad: General"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/appointmentHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="Hora: 11:30"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />


            <TextView
                android:id="@+id/schedule_hours_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="Horarios de consulta:"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/schedule_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="De 8:00 a 17:30"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/schedule_days_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/gap12dp"
                android:text="Días de consulta:"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/schedule_days_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/monday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Monday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tuesday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tuesday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wednesday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/thursday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Thursday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/friday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Friday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/saturday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Saturday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sunday_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sunday_text" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/gap12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editButtonReminder"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:paddingHorizontal="@dimen/gap12dp"
                    app:icon="@drawable/ic_edit"
                    app:iconSize="24dp"
                    app:iconTint="?colorOnSurfaceVariant" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteButtonReminder"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:paddingHorizontal="@dimen/gap12dp"
                    app:icon="@drawable/ic_delete"
                    app:iconSize="24dp"
                    app:iconTint="?colorOnSurfaceVariant"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>